--- a/src/less/theme_components/modals.less
+++ b/src/less/theme_components/modals.less
@@ -1,15 +1,12 @@
 /*! -- Stack Modals -- */
 
-//Fix for iOS Modal Bug
 html {
-	&.device-ios {
-		body {
-			&.has-modal {
-				height: 100%;
-				overflow: hidden;
-				width: 100%;
-				position: absolute;
-			}
+	body {
+		&.has-modal {
+			height: 100%;
+			overflow: hidden;
+			width: 100%;
+			position: absolute;
 		}
 	}
 }
